# ProyectoAgenda

./: .gitignore  CMakeLists.txt  README.md
include/: alumno.hpp  cliente.hpp  materia.hpp  mensaje.hpp  networkmaneger.hpp  notificaciones.hpp  persistencia.hpp  plannerDia.hpp  plannerSemana.hpp  profesor.hpp  servidor.hpp  subtarea.hpp  tarea.hpp  usuario.hpp
include/SFML/: dashboard.hpp  login.hpp  planner.hpp
src/: alumno.cpp  cliente.cpp  mainPrueba.cpp  materia.cpp  mensaje.cpp  networkmaneger.cpp  notificaciones.cpp  persistencia.cpp  plannerDia.cpp  plannerSemana.cpp  profesor.cpp  servidor.cpp  subtarea.cpp  tarea.cpp  usuario.cpp
src/SFML/: dashboard.cpp  login.cpp  mainSFML.cpp  planner.cpp
src/pruebas/: mainCliente.cpp  mainServidor.cpp
